# NaCl

./: .gitignore  Cargo.toml  limine.cfg  limine.conf  linker.ld  z.sh
.cargo/: config.toml
nacl/: Cargo.toml  build.rs  x86_64-nacl-kernel.json
nacl/.cargo/: config.toml
nacl/src/: context.rs  cores.rs  main.rs
nacl/src/arch/x86_64/: acpi.rs  ap_init.asm  ap_init_long.asm  apic.rs  gdt.rs  interrupts.rs  mod.rs  smp.rs  time.rs
nacl/src/arch/x86_64/memory/: mapper.rs  mod.rs
nacl/src/font/: mod.rs
nacl/src/task/: crossbeam.rs  executor.rs  gc.rs  lock.rs  mod.rs
nacl_boot/: Cargo.toml
nacl_boot/src/: main.rs
sfos_boot/: Cargo.toml
sfos_boot/src/: main.rs
src/: acpi.rs  apic.rs  cores.rs  gdt.rs  interrupts.rs  main.rs  serial.rs
src/arch/x86_64/: apic.rs  interrupts.rs  mod.rs  smp.rs  time.rs
src/font/: mod.rs  ter-u20n.psf
src/memory/: allocator.rs  mapper.rs  mod.rs
src/task/: executor.rs  lock.rs  mod.rs
