cargo-features = ["per-package-target"]

[workspace]
members = ["sfos_boot"]

[package]
name = "sfos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acpi = "4.1.0"
uart_16550 = "0.2.15"
bootloader = "0.10.9"
spin = "0.9.2"
x86_64 = "0.14.6"
linked_list_allocator = "0.9.0"
hashbrown = "0.11.2"
raw-cpuid = "10.2.0"

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.futures-util]
version = "0.3.18"
default-features = false
features = ["alloc"]

[package.metadata.bootloader]
map-physical-memory = true